--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-   width:  100vw;
-   height: 100vh;
+  width:  500px;
+  height: 100vh;
 }
 
 
@@ -25,3 +25,21 @@ body{
   gap: 1rem;
 
 } 
+.Add{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media  (max-width: 500px){
+
+  #root{
+    min-width: 280px;
+    margin: 0 auto;
+    padding: 1rem;
+    text-align: center;
+    width:  340px;
+    height: 100vh;
+  }
+
+}
