--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,3 +1,7 @@
+
+*{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .card{
     display: flex;
     align-items: center;
@@ -51,5 +55,17 @@ button{
     button{
         font-size: 12px;
     }
-   
+    input{
+
+         color: white;
+        padding: 13px;
+    }
+    button{
+        color: white;
+        padding: 10px;
+       font-size: 15px;
+    }
+   ::placeholder{
+    font-size: 15px;
+   }
 }
